--- a/projects.html
+++ b/projects.html
@@ -66,16 +66,41 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Project Card 3-->
+                            <br>
+                            <br>
+
+                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">Stage Mai-Juillet 2023</h2>
+                                            <p>L'entreprise dans laquelle j'ai effectué mon stage :
+                                                L’entreprise dans laquelle j’ai effectué mon stage se nomme Sunu Assurance. SUNU Assurance est une société d’assurance internationale.
+<br>
+                                                <strong>La structure de l'entreprise :</strong>
+                                                L’entreprise est divisée en 4 modules : production, comptabilité, sinistre, réassurance.
+<br>
+                                                <strong>Ma première mission :</strong>
+                                                Ma première mission a été de réaliser un cahier des charges. Pour cela, j'ai commencé par me renseigner sur les différents besoins des caissiers. Cette étape m'a permis de créer un diagramme de classe,<img class="img-fluid" src="assets/modèle%20UML.png" alt="..." /> un diagramme de cas d'utilisation,<img class="img-fluid" src="assets/diagramme.PNG" alt="..." />ainsi qu'une arborescence du projet,<img class="img-fluid" src="assets/arborescnece.png" alt="..." /> . Enfin, j'ai mis en place une base de données pour concrétiser ces éléments <img class="img-fluid" src="assets/base.png" alt="..." />.</p>
+
+                                        </div>
+                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
+
             <!-- Call to action section-->
             <section class="py-5 bg-gradient-primary-to-secondary text-white">
                 <div class="container px-5 my-5">
                     <div class="text-center">
                         <h2 class="display-4 fw-bolder mb-4">Pour me contacté</h2>
-                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>
+                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact</a>
                     </div>
                 </div>
             </section>
