ajout de rapport de stage

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">Mon nom est AYITE Ekué Etienne.</p>
+                                <p class="lead fw-light mb-4">Mon nom est AYITE Ekué Etienne actuellement étudiant  en BTS SIO option slam.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <p class="text-muted"></p>
                                     <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
