ajout de rapport de stage 2024

--- a/resume.html
+++ b/resume.html
@@ -47,28 +47,12 @@
                                 <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="#!">
+                                <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
                                     <div class="d-inline-block bi bi-download me-2"></div>
-                                    Download Resume
+                                    Téléchargé le CV
                                 </a>
                             </div>
                             <!-- Experience Card 1-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Mai 2022-Juillet 2022</div>
-                                                <div class="small fw-bolder">Createur MLD</div>
-                                                <div class="small text-muted">CODE Flow</div>
-                                                <div class="small text-muted">Nanterre, 92</div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-8"><div>J'ai eu pour mission de modéliser un mld d'un site d'orchestre en communuquant avec mon maitre de stage et  je le client par mail fournie par l'entrepris. La MLD à été modéliser en drawio</div></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Experience Card 2-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
@@ -85,6 +69,23 @@
                                             Ensuite, j'ai créé un CRUD pour la partie administration sans obligation de style, qui sera déterminé ultérieurement par l'entreprise pour la partie administration.
 
                                             Enfin, j'ai créé une application de gestion de caisse qui affiche les informations d'achat des clients, ainsi que leurs relevés de compte transmis depuis la base de données de l'application métier pour alimenter celle de l'application de caisse. L'application doit permettre aux caissiers de gérer le passage des assurances impayées en payées, puis de les modifier dans la base de données.</div></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Experience Card 2-->
+
+                            <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
+                                                <div class="text-primary fw-bolder mb-2">Mai 2024-Juillet 2024</div>
+                                                <div class="small fw-bolder">Createur MLD</div>
+                                                <div class="small text-muted">CODE Flow</div>
+                                                <div class="small text-muted">Nanterre, 92</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-8"><div>Pendant mon stage, j'ai été chargé de reprendre un projet d'application web d'orchestre développée en Java avec Spring Boot. Mes missions comprenaient la refonte de la modélisation de la base de données, sa création sur MySQL, la mise en place du projet Spring Boot, la configuration de la source de données MySQL dans Spring Boot, ainsi que la création de certaines entités, leurs repositories et l'implémentation de méthodes REST.</div></div>
                                     </div>
                                 </div>
                             </div>
