--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                                             <h2 class="fw-bolder">Help ORT Front-end</h2>
                                             <p>Le projet consiste a faire la partie front-end d'un site qui à pour but d'aider les étdants d'une école à se donner des cours entre eux selon leurs classes</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
                                 </div>
                             </div>
@@ -62,7 +62,7 @@
                                             <h2 class="fw-bolder">Help ORT Back-end</h2>
                                             <p>Le second projet concerne de back end de Help ORT où une partie admin est créé pour pouvoir gérer les étudiants et les matières notamment les ajouts, les suppression et les modifications</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
                                 </div>
                             </div>
@@ -76,7 +76,8 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Stage Mai-Juillet 2023</h2>
-                                            <p>L'entreprise dans laquelle j'ai effectué mon stage :
+                                            <p>
+                                                L'entreprise dans laquelle j'ai effectué mon stage :
                                                 L’entreprise dans laquelle j’ai effectué mon stage se nomme Sunu Assurance. SUNU Assurance est une société d’assurance internationale.
 <br>
                                                 <strong>La structure de l'entreprise :</strong>
@@ -86,7 +87,47 @@
                                                 Ma première mission a été de réaliser un cahier des charges. Pour cela, j'ai commencé par me renseigner sur les différents besoins des caissiers. Cette étape m'a permis de créer un diagramme de classe,<img class="img-fluid" src="assets/modèle%20UML.png" alt="..." /> un diagramme de cas d'utilisation,<img class="img-fluid" src="assets/diagramme.PNG" alt="..." />ainsi qu'une arborescence du projet,<img class="img-fluid" src="assets/arborescnece.png" alt="..." /> . Enfin, j'ai mis en place une base de données pour concrétiser ces éléments <img class="img-fluid" src="assets/base.png" alt="..." />.</p>
 
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 4-->
+                            <br>
+                            <br>
+                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">Stage Janvier-Février 2024</h2>
+                                            <p>
+                                            <ul><p><strong>Reprendre la modélisation de la base de données: </strong></p>
+                                                <li>Revoir la modélisation de la base de données et apporter les modifications nécessaires..</li>
+                                                <li>S'assurer que la modélisation est cohérente et répond aux besoins du projet.</li>
+                                        </ul>
+                                            <br>
+                                            <ul><p><strong>Créer la base de données om-db sur MySql:</strong></p>
+                                                <li>Créer une nouvelle base de données MySQL avec le nom "om-db".</li>
+                                                <li>S'assurer que la base de données est accessible par le projet Spring Boot.</li>
+                                            </ul>
+                                            <br>
+                                            <ul><p><strong>Changer la description dans le pom.xml:</strong></p>
+                                                <li>Modifier la description du projet dans le fichier pom.xml.</li>
+                                                <li>  La description doit être claire et concise et doit refléter les fonctionnalités du projet.</li>
+                                            </ul>
+                                            <br>
+                                            <ul><p><strong>Créer Fontité Utilisateur et son repository (spring jpal):</strong></p>
+                                                <li>Modifier la description du projet dans le fichier pom.xml.</li>
+                                                <li>  Créer un repository pour l'entité "Utilisateur" avec les méthodes CRUD (Create, Read, Update, Delete).</li>
+                                            </ul>
+                                            <br>
+                                            <ul><p><strong>Faire des methodes REST et la testé (en Json)</strong></p>
+                                                <li>Créé des controller des classes  </li>
+                                                <li> Ecrire un test de création d'utilistaur puis le récupérer depuis la base et du assert les valeurs de ces fields.</li>
+                                                <li>Faire un test avec une application de test(Postman)</li>
+                                            </ul>
+
+                                        </div>
+                                        <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
                                 </div>
                             </div>
