--- a/projects.html
+++ b/projects.html
@@ -83,9 +83,8 @@
                                                 <strong>La structure de l'entreprise :</strong>
                                                 L’entreprise est divisée en 4 modules : production, comptabilité, sinistre, réassurance.
 <br>
-                                                <strong>Ma première mission :</strong>
-                                                Ma première mission a été de réaliser un cahier des charges. Pour cela, j'ai commencé par me renseigner sur les différents besoins des caissiers. Cette étape m'a permis de créer un diagramme de classe,<img class="img-fluid" src="assets/modèle%20UML.png" alt="..." /> un diagramme de cas d'utilisation,<img class="img-fluid" src="assets/diagramme.PNG" alt="..." />ainsi qu'une arborescence du projet,<img class="img-fluid" src="assets/arborescnece.png" alt="..." /> . Enfin, j'ai mis en place une base de données pour concrétiser ces éléments <img class="img-fluid" src="assets/base.png" alt="..." />.</p>
-
+                                                <strong>Mes missions :</strong>
+                                                Ma première mission a été de réaliser un cahier des charges. Pour cela, j'ai commencé par me renseigner sur les différents besoins des caissiers. Cette étape m'a permis de créer un diagramme de classe,<img class="img-fluid" src="assets/modèle%20UML.png" alt="..." /> un diagramme de cas d'utilisation,<img class="img-fluid" src="assets/diagramme.PNG" alt="..." />ainsi qu'une arborescence du projet,<img class="img-fluid" src="assets/arborescnece.png" alt="..." /> . Enfin, j'ai mis en place une base de données pour concrétiser ces éléments <img class="img-fluid" src="assets/base.png" alt="..." /> <br>j'ai ensuite fait une page d'acceuil et authentification.<img class="img-fluid" src="assets/img_2.png" alt="..." /> <br> <br> <img class="img-fluid" src="assets/img_3.png" alt="..." />  </p>
                                         </div>
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
@@ -103,27 +102,35 @@
                                             <ul><p><strong>Reprendre la modélisation de la base de données: </strong></p>
                                                 <li>Revoir la modélisation de la base de données et apporter les modifications nécessaires..</li>
                                                 <li>S'assurer que la modélisation est cohérente et répond aux besoins du projet.</li>
+                                            <img class="img-fluid" src="assets/mdc.png" alt="..." />
                                         </ul>
                                             <br>
                                             <ul><p><strong>Créer la base de données om-db sur MySql:</strong></p>
                                                 <li>Créer une nouvelle base de données MySQL avec le nom "om-db".</li>
                                                 <li>S'assurer que la base de données est accessible par le projet Spring Boot.</li>
+                                                <img class="img-fluid" src="assets/base%20de%20donné.png" alt="..." />
                                             </ul>
                                             <br>
                                             <ul><p><strong>Changer la description dans le pom.xml:</strong></p>
                                                 <li>Modifier la description du projet dans le fichier pom.xml.</li>
                                                 <li>  La description doit être claire et concise et doit refléter les fonctionnalités du projet.</li>
+                                                <--img class="img-fluid" src="assets/base%20de%20donné.png" alt="..." /-->
                                             </ul>
                                             <br>
-                                            <ul><p><strong>Créer Fontité Utilisateur et son repository (spring jpal):</strong></p>
+                                            <ul><p><strong>Créer Enntité Utilisateur Adresse et son repository (spring jpal):</strong></p>
                                                 <li>Modifier la description du projet dans le fichier pom.xml.</li>
                                                 <li>  Créer un repository pour l'entité "Utilisateur" avec les méthodes CRUD (Create, Read, Update, Delete).</li>
+                                                <img class="img-fluid" src="assets/EntitéUtilisateur.png" alt="..." />
+                                                <br>
+                                                <br>
+                                                <img class="img-fluid" src="assets/EntitéAdresse.png" alt="..." />
                                             </ul>
                                             <br>
                                             <ul><p><strong>Faire des methodes REST et la testé (en Json)</strong></p>
                                                 <li>Créé des controller des classes  </li>
                                                 <li> Ecrire un test de création d'utilistaur puis le récupérer depuis la base et du assert les valeurs de ces fields.</li>
                                                 <li>Faire un test avec une application de test(Postman)</li>
+                                                <img class="img-fluid" src="assets/Controller.png" alt="..." />
                                             </ul>
 
                                         </div>
