ajout de rapport de stage 2024 ajout des expérience projet de classe

--- a/projects.html
+++ b/projects.html
@@ -47,8 +47,10 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Help ORT Front-end</h2>
-                                            <p>Le projet consiste a faire la partie front-end d'un site qui à pour but d'aider les étdants d'une école à se donner des cours entre eux selon leurs classes</p>
+                                            <h2 class="fw-bolder">Help ORT PHP</h2>
+                                            <p>Le projet consiste à développer la partie front-end d'un site web appelé HelpORT, construit en PHP Symfony 6. L'objectif principal est d'offrir un support aux étudiants de l'école ORT Montreuil en leur permettant de dispenser des cours entre eux, en fonction de leurs classes et des matières dans lesquelles ils peuvent offrir leur aide.
+
+                                                Les fonctionnalités développées incluent la possibilité de choisir les matières dans lesquelles dispenser des cours, la demande de cours de soutien et la création d'un graphique analytique pour suivre l'utilisation de l'application. </p>
                                         </div>
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
@@ -59,10 +61,10 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Help ORT Back-end</h2>
-                                            <p>Le second projet concerne de back end de Help ORT où une partie admin est créé pour pouvoir gérer les étudiants et les matières notamment les ajouts, les suppression et les modifications</p>
-                                        </div>
+                                            <h2 class="fw-bolder">Help ORT JAVA</h2>
+                                            <p>Le deuxième projet porte sur HelpORT, mais cette fois-ci en tant qu'application lourde développée en JavaFX. Les fonctionnalités du projet restent inchangées, à l'exception de la structure de la base de données qui est différente.</p>
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
+                                    </div>
                                     </div>
                                 </div>
                             </div>
@@ -79,12 +81,15 @@
                                             <p>
                                                 L'entreprise dans laquelle j'ai effectué mon stage :
                                                 L’entreprise dans laquelle j’ai effectué mon stage se nomme Sunu Assurance. SUNU Assurance est une société d’assurance internationale.
-<br>
+                                                <br>
                                                 <strong>La structure de l'entreprise :</strong>
                                                 L’entreprise est divisée en 4 modules : production, comptabilité, sinistre, réassurance.
-<br>
+                                                <br>
+                                                <p><strong>Contraintes :</strong> Mes contraintes techniques ont été d’utilisé Postgrsql pour la gestion de base de donnée, la Framework Laravel pour le développement en php, gestionnaire de suivi Gitlab, l’interface étais en html.blade et css.</p>
+                                                <br>
                                                 <strong>Mes missions :</strong>
-                                                Ma première mission a été de réaliser un cahier des charges. Pour cela, j'ai commencé par me renseigner sur les différents besoins des caissiers. Cette étape m'a permis de créer un diagramme de classe,<img class="img-fluid" src="assets/modèle%20UML.png" alt="..." /> un diagramme de cas d'utilisation,<img class="img-fluid" src="assets/diagramme.PNG" alt="..." />ainsi qu'une arborescence du projet,<img class="img-fluid" src="assets/arborescnece.png" alt="..." /> . Enfin, j'ai mis en place une base de données pour concrétiser ces éléments <img class="img-fluid" src="assets/base.png" alt="..." /> <br>j'ai ensuite fait une page d'acceuil et authentification.<img class="img-fluid" src="assets/img_2.png" alt="..." /> <br> <br> <img class="img-fluid" src="assets/img_3.png" alt="..." />  </p>
+                                                <p>Ma première mission a été de réaliser un cahier des charges. Pour cela, j'ai commencé par me renseigner sur les différents besoins des caissiers. Cette étape m'a permis de créer un diagramme de classe,<img class="img-fluid" src="assets/modèle%20UML.png" alt="..." /> un diagramme de cas d'utilisation,<img class="img-fluid" src="assets/diagramme.PNG" alt="..." />ainsi qu'une arborescence du projet,<img class="img-fluid" src="assets/arborescnece.png" alt="..." /> . Enfin, j'ai mis en place une base de données pour concrétiser ces éléments <img class="img-fluid" src="assets/base.png" alt="..." /> <br>j'ai ensuite fait une page d'accueil et authentification.<img class="img-fluid" src="assets/img_2.png" alt="..." /> <br> <br> <img class="img-fluid" src="assets/img_3.png" alt="..." />  </p>
+
                                         </div>
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
@@ -103,7 +108,7 @@
                                                 <li>Revoir la modélisation de la base de données et apporter les modifications nécessaires..</li>
                                                 <li>S'assurer que la modélisation est cohérente et répond aux besoins du projet.</li>
                                             <img class="img-fluid" src="assets/mdc.png" alt="..." />
-                                        </ul>
+                                            </ul>
                                             <br>
                                             <ul><p><strong>Créer la base de données om-db sur MySql:</strong></p>
                                                 <li>Créer une nouvelle base de données MySQL avec le nom "om-db".</li>
@@ -137,6 +142,7 @@
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
