ajout de l'hackathon

--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,8 @@
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
+
+
                             <!-- Project Card 1-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
@@ -65,6 +67,24 @@
                                             <p>Le deuxième projet porte sur HelpORT, mais cette fois-ci en tant qu'application lourde développée en JavaFX. Les fonctionnalités du projet restent inchangées, à l'exception de la structure de la base de données qui est différente.</p>
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
+                            <br>
+                            <!-- Project Card hackathon-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">hackathon</h2>
+                                            <p>
+                                                <img class="img-fluid" src="assets/Orange_ex3.png" alt="..." ></p>
+                                                <img class="img-fluid" src="assets/Orange_ex2.png" alt="..." ></p>
+                                                <img class="img-fluid" src="assets/Orange_ex1.png" alt="..." ></p>
+
+                                            <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
+                                        </div>
                                     </div>
                                 </div>
                             </div>
