--- a/resume.html
+++ b/resume.html
@@ -90,6 +90,24 @@
                                 </div>
                             </div>
                         </section>
+                        <!-- Experience Card 3-->
+
+                        <div class="card shadow border-0 rounded-4 mb-5">
+                            <div class="card-body p-5">
+                                <div class="row align-items-center gx-5">
+                                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                        <div class="bg-light p-4 rounded-4">
+                                            <div class="text-primary fw-bolder mb-2">Mai 2024-Juillet 2024</div>
+                                            <div class="small fw-bolder">Createur MLD</div>
+                                            <div class="small text-muted">CODE Flow</div>
+                                            <div class="small text-muted">Nanterre, 92</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-8"><div>Le but de se projet était de trouver une solution pour que les batîments de l'enseigne Orange consomme le moins d'éléctricité et pour solution une IA devait être utilisé.</div></div>
+                                </div>
+                            </div>
+                        </div>
+                        </section>
                         <!-- Education Section-->
                         <section>
                             <h2 class="text-secondary fw-bolder mb-4">Formation</h2>
