ajout de l'hackathon

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -51,6 +51,10 @@
                                     <div class="d-inline-block bi bi-download me-2"></div>
                                     Télécharger le CV
                                 </a>
+                                <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
+                                    <div class="d-inline-block bi bi-download me-2"></div>
+                                    Mon Tableau de synthèse
+                                </a>
                             </div>
                             <!-- Experience Card 1-->
                             <div class="card shadow border-0 rounded-4 mb-5">
@@ -89,28 +93,52 @@
                                     </div>
                                 </div>
                             </div>
-                        </section>
-                        <!-- Experience Card 3-->
 
-                        <div class="card shadow border-0 rounded-4 mb-5">
-                            <div class="card-body p-5">
-                                <div class="row align-items-center gx-5">
-                                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                        <div class="bg-light p-4 rounded-4">
-                                            <div class="text-primary fw-bolder mb-2">Mai 2024-Juillet 2024</div>
-                                            <div class="small fw-bolder">Createur MLD</div>
-                                            <div class="small text-muted">CODE Flow</div>
-                                            <div class="small text-muted">Nanterre, 92</div>
+                            <!-- Experience Card 3-->
+
+                            <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
+                                                <div class="text-primary fw-bolder mb-2">Mai 2024-Juillet 2024</div>
+                                                <div class="small fw-bolder">Createur MLD</div>
+                                                <div class="small text-muted">CODE Flow</div>
+                                                <div class="small text-muted">Nanterre, 92</div>
+                                            </div>
                                         </div>
+                                        <div class="col-lg-8"><div>Le but de se projet était de trouver une solution pour que les batîments de l'enseigne Orange consomme le moins d'éléctricité et pour solution une IA devait être utilisé.</div></div>
                                     </div>
-                                    <div class="col-lg-8"><div>Le but de se projet était de trouver une solution pour que les batîments de l'enseigne Orange consomme le moins d'éléctricité et pour solution une IA devait être utilisé.</div></div>
                                 </div>
                             </div>
-                        </div>
                         </section>
+
+
                         <!-- Education Section-->
                         <section>
                             <h2 class="text-secondary fw-bolder mb-4">Formation</h2>
+
+                            <!-- Education Card 2-->
+                            <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
+                                                <div class="text-secondary fw-bolder mb-2">2020-2021</div>
+                                                <div class="mb-2">
+                                                    <div class="small fw-bolder">Cours-Lumière</div>
+                                                    <div class="small text-muted">Lomé, Togo</div>
+                                                </div>
+                                                <div class="fst-italic">
+                                                    <div class="small text-muted">BTS</div>
+                                                    <div class="small text-muted">SIO</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-8"><div>Bac générale, spécialité SES,Géopolitique</div></div>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- Education Card 1-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
@@ -132,6 +160,7 @@
                                     </div>
                                 </div>
                             </div>
+
 
                         <!-- Divider-->
                         <div class="pb-5"></div>
@@ -160,9 +189,12 @@
                                 </div>
                             </div>
                         </section>
+                        </section>
                     </div>
                 </div>
             </div>
+
+
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
