--- a/resume.html
+++ b/resume.html
@@ -22,14 +22,14 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Start Bootstrap</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">AYITE Ekué Etienne</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <!--li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li -->
                         </ul>
                     </div>
                 </div>
@@ -43,19 +43,68 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
-                            <div class="d-flex align-items-center justify-content-between mb-4">
-                                <h2 class="text-primary fw-bolder mb-0">Experience</h2>
-                                <!-- Download resume button-->
-                                <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
-                                    <div class="d-inline-block bi bi-download me-2"></div>
-                                    Télécharger le CV
-                                </a>
-                                <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
-                                    <div class="d-inline-block bi bi-download me-2"></div>
-                                    Mon Tableau de synthèse
-                                </a>
-                            </div>
+
+
+                            <!-- Education Section-->
+                            <section>
+                                <h2 class="text-secondary fw-bolder mb-4">Formation</h2>
+
+                                <!-- Education Card 2-->
+                                <div class="card shadow border-0 rounded-4 mb-5">
+                                    <div class="card-body p-5">
+                                        <div class="row align-items-center gx-5">
+                                            <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                                <div class="bg-light p-4 rounded-4">
+                                                    <div class="text-secondary fw-bolder mb-2">2020-2021</div>
+                                                    <div class="mb-2">
+                                                        <div class="small fw-bolder">Cours-Lumière</div>
+                                                        <div class="small text-muted">Lomé, Togo</div>
+                                                    </div>
+                                                    <div class="fst-italic">
+                                                        <div class="small text-muted">BTS</div>
+                                                        <div class="small text-muted">SIO</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-8"><div>Bac générale, spécialité SES,Géopolitique</div></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Education Card 1-->
+                                <div class="card shadow border-0 rounded-4 mb-5">
+                                    <div class="card-body p-5">
+                                        <div class="row align-items-center gx-5">
+                                            <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                                <div class="bg-light p-4 rounded-4">
+                                                    <div class="text-secondary fw-bolder mb-2">année en cours</div>
+                                                    <div class="mb-2">
+                                                        <div class="small fw-bolder">ORT Daniel Mayers</div>
+                                                        <div class="small text-muted">Montreuil, 93100</div>
+                                                    </div>
+                                                    <div class="fst-italic">
+                                                        <div class="small text-muted">BTS</div>
+                                                        <div class="small text-muted">SIO</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-8"><div>Formation de système informatique appliqué aux organisations axée sur le développement web et les applications, ainsi que sur les systèmes réseaux, la gestion et la création de bases de données, du modèle MLD jusqu'au SQL et la cybersécurité. De plus, nous avons des matières telles que l'économie, les mathématiques et la culture générale en tronc commun.</div></div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="d-flex align-items-center justify-content-between mb-4">
+                                    <h2 class="text-primary fw-bolder mb-0">Experience</h2>
+                                    <!-- Download resume button-->
+                                    <!-- Note: Set the link href target to a PDF file within your project-->
+                                    <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
+                                        <div class="d-inline-block bi bi-download me-2"></div>
+                                        Télécharger le CV
+                                    </a>
+                                    <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
+                                        <div class="d-inline-block bi bi-download me-2"></div>
+                                        Mon Tableau de synthèse
+                                    </a>
+                                </div>
                             <!-- Experience Card 1-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
@@ -101,10 +150,9 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Mai 2024-Juillet 2024</div>
-                                                <div class="small fw-bolder">Createur MLD</div>
-                                                <div class="small text-muted">CODE Flow</div>
-                                                <div class="small text-muted">Nanterre, 92</div>
+                                                <div class="text-primary fw-bolder mb-2">18-22 Décembre 2024</div>
+                                                <div class="small text-muted">Orange</div>
+                                                <div class="small text-muted">Issy-les-Moulineaux, 92</div>
                                             </div>
                                         </div>
                                         <div class="col-lg-8"><div>Le but de se projet était de trouver une solution pour que les batîments de l'enseigne Orange consomme le moins d'éléctricité et pour solution une IA devait être utilisé.</div></div>
@@ -114,52 +162,7 @@
                         </section>
 
 
-                        <!-- Education Section-->
-                        <section>
-                            <h2 class="text-secondary fw-bolder mb-4">Formation</h2>
 
-                            <!-- Education Card 2-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">2020-2021</div>
-                                                <div class="mb-2">
-                                                    <div class="small fw-bolder">Cours-Lumière</div>
-                                                    <div class="small text-muted">Lomé, Togo</div>
-                                                </div>
-                                                <div class="fst-italic">
-                                                    <div class="small text-muted">BTS</div>
-                                                    <div class="small text-muted">SIO</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-8"><div>Bac générale, spécialité SES,Géopolitique</div></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Education Card 1-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">année en cours</div>
-                                                <div class="mb-2">
-                                                    <div class="small fw-bolder">ORT Daniel Mayers</div>
-                                                    <div class="small text-muted">Montreuil, 93100</div>
-                                                </div>
-                                                <div class="fst-italic">
-                                                    <div class="small text-muted">BTS</div>
-                                                    <div class="small text-muted">SIO</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-8"><div>Formation de système informatique appliqué aux organisations axée sur le développement web et les applications, ainsi que sur les systèmes réseaux, la gestion et la création de bases de données, du modèle MLD jusqu'au SQL et la cybersécurité. De plus, nous avons des matières telles que l'économie, les mathématiques et la culture générale en tronc commun.</div></div>
-                                    </div>
-                                </div>
-                            </div>
 
 
                         <!-- Divider-->
