--- a/projects.html
+++ b/projects.html
@@ -22,14 +22,14 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Start Bootstrap</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">AYITE Ekué Etienne</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resumé</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <!--li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li-->
                         </ul>
                     </div>
                 </div>
@@ -139,10 +139,10 @@
                                             <ul><p><strong>Changer la description dans le pom.xml:</strong></p>
                                                 <li>Modifier la description du projet dans le fichier pom.xml.</li>
                                                 <li>  La description doit être claire et concise et doit refléter les fonctionnalités du projet.</li>
-                                                <--img class="img-fluid" src="assets/base%20de%20donné.png" alt="..." /-->
+
                                             </ul>
                                             <br>
-                                            <ul><p><strong>Créer Enntité Utilisateur Adresse et son repository (spring jpal):</strong></p>
+                                            <ul><p><strong>Créer Entité Utilisateur Adresse et son repository (spring jpal):</strong></p>
                                                 <li>Modifier la description du projet dans le fichier pom.xml.</li>
                                                 <li>  Créer un repository pour l'entité "Utilisateur" avec les méthodes CRUD (Create, Read, Update, Delete).</li>
                                                 <img class="img-fluid" src="assets/EntitéUtilisateur.png" alt="..." />
