--- a/projects.html
+++ b/projects.html
@@ -136,14 +136,13 @@
                                                 <img class="img-fluid" src="assets/base%20de%20donné.png" alt="..." />
                                             </ul>
                                             <br>
-                                            <ul><p><strong>Changer la description dans le pom.xml:</strong></p>
+                                            <ul><p><strong>Créer  le projet et Changer la description dans le pom.xml:</strong></p>
                                                 <li>Modifier la description du projet dans le fichier pom.xml.</li>
                                                 <li>  La description doit être claire et concise et doit refléter les fonctionnalités du projet.</li>
 
                                             </ul>
                                             <br>
                                             <ul><p><strong>Créer Entité Utilisateur Adresse et son repository (spring jpal):</strong></p>
-                                                <li>Modifier la description du projet dans le fichier pom.xml.</li>
                                                 <li>  Créer un repository pour l'entité "Utilisateur" avec les méthodes CRUD (Create, Read, Update, Delete).</li>
                                                 <img class="img-fluid" src="assets/EntitéUtilisateur.png" alt="..." />
                                                 <br>
