--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
                                         <div class="d-inline-block bi bi-download me-2"></div>
                                         Télécharger le CV
                                     </a>
-                                    <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
+                                    <a class="btn btn-primary px-4 py-3" href="Tableau%20de%20synthèse%20-%20Epreuve%20E4%20-%20BTS%20SIO%202023.xlsx">
                                         <div class="d-inline-block bi bi-download me-2"></div>
                                         Mon Tableau de synthèse
                                     </a>
