--- a/resume.html
+++ b/resume.html
@@ -125,6 +125,20 @@
                                     </div>
                                 </div>
                             </div>
+                                <div class="card shadow border-0 rounded-4 mb-5">
+                                    <div class="card-body p-5">
+                                        <div class="row align-items-center gx-5">
+                                            <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                                <div class="bg-light p-4 rounded-4">
+                                                    <div class="text-primary fw-bolder mb-2">18-22 Décembre 2024</div>
+                                                    <div class="small text-muted">Orange</div>
+                                                    <div class="small text-muted">Issy-les-Moulineaux, 92</div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-8"><div>Le but de se projet était de trouver une solution pour que les batîments de l'enseigne Orange consomme le moins d'éléctricité et pour solution une IA devait être utilisé.</div></div>
+                                        </div>
+                                    </div>
+                                </div>
                             <!-- Experience Card 2-->
 
                             <div class="card shadow border-0 rounded-4 mb-5">
@@ -132,7 +146,7 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Mai 2024-Juillet 2024</div>
+                                                <div class="text-primary fw-bolder mb-2">Janvier 2024-Février 2024</div>
                                                 <div class="small fw-bolder">Createur MLD</div>
                                                 <div class="small text-muted">CODE Flow</div>
                                                 <div class="small text-muted">Nanterre, 92</div>
@@ -145,20 +159,7 @@
 
                             <!-- Experience Card 3-->
 
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">18-22 Décembre 2024</div>
-                                                <div class="small text-muted">Orange</div>
-                                                <div class="small text-muted">Issy-les-Moulineaux, 92</div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-8"><div>Le but de se projet était de trouver une solution pour que les batîments de l'enseigne Orange consomme le moins d'éléctricité et pour solution une IA devait être utilisé.</div></div>
-                                    </div>
-                                </div>
-                            </div>
+
                         </section>
 
 
